--- a/styles/style.css
+++ b/styles/style.css
@@ -5,13 +5,22 @@
     padding: 0;
 }
 
+:root {
+    --cor-destaque: #22D4FD;
+    --cor-fundo: #000000;
+    --cor-textos: #F6F6F6;
+    --cor-hover-fundo: #272727;
+    --fonte-titulo: 'Krona One', sans serif;
+    --fonte-texto: 'Montserrat', sans serif;
+}
+
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    background-color: #000000;
-    color: #F6F6F6;
+    background-color: var(--cor-fundo);
+    color: var(--cor-textos);
 }
 
 .cabecalho {
@@ -24,10 +33,10 @@ body {
 }
 
 .cabecalho__menu__link {
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-texto);
     font-size: 24px;
     font-weight: 600;
-    color: #22D4FD;
+    color: var(--cor-destaque);
     text-decoration: none;
 }
 
@@ -47,12 +56,12 @@ body {
 
 .apresentacao__conteudo__titulo {
     font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-titulo);
 }
 
 .apresentacao__conteudo__paragrafo {
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-texto);
     text-align: justify;
 }
 
@@ -62,7 +71,7 @@ body {
 
 .certificado {
     text-decoration: none;
-    color: #22D4FD;
+    color: var(--cor-destaque);
 }
 
 .apresentacao__links {
@@ -74,7 +83,7 @@ body {
 }
 
 .apresentacao__links__subtitulo {
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-titulo);
     font-weight: 400;
     font-size: 24px;
 }
@@ -86,42 +95,41 @@ body {
     justify-content: center;
     gap: 16px;
     padding: 21.5px 0;
-    color: white;
-    font-family: 'Montserrat', sans-serif;
+    color: var(--cor-textos);
+    font-family: var(--fonte-texto);
     font-size: 24px;
     font-weight: 600;
-    border: 2px solid #22D4FD;
+    border: 2px solid var(--cor-destaque);
     border-radius: 8px;
     text-decoration: none;
 }
 
 .apresentacao__links__botoes:hover {
-    background-color: #272727;
-    color: grey;
+    background-color: var(--cor-hover-fundo);
 }
 
-.titulo-destaque {
-    color: #22D4FD;
+.cor-destaque {
+    color: var(--cor-destaque);
 }
 
 strong {
-    color: #22D4FD;
+    color: var(--cor-destaque);
 }
 
 .apresentacao__conteudo__experiencia {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-titulo);
 }
 
 .rodape {
-    color: #000000;
-    background-color: #22D4FD;
+    color: var(--cor-fundo);
+    background-color: var(--cor-destaque);
     margin-top: auto;
     padding: 10px;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-texto);
     font-size: 24px;
     font-weight: 400;
 }
