--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,11 @@ body {
     font-weight: 600;
     color: var(--cor-destaque);
     text-decoration: none;
+    transition: all 0.5s;
+}
+
+.cabecalho__menu__link:hover {
+    font-size: 1.7rem;
 }
 
 .apresentacao {
@@ -57,7 +62,7 @@ body {
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 2.25rem; /* 1rem = 16x (unidade relativa)*/
+    font-size: 2.25rem;
     font-family: var(--fonte-titulo);
 }
 
@@ -74,6 +79,11 @@ body {
 .certificado {
     text-decoration: none;
     color: var(--cor-destaque);
+    transition: all 0.5s;
+}
+
+.certificado:hover {
+    font-size: 1.5rem;
 }
 
 .apresentacao__links {
@@ -95,7 +105,7 @@ body {
     width: 50%;
     text-align: center;
     justify-content: center;
-    gap: 16px;
+    gap: 1rem;
     padding: 21.5px 0;
     color: var(--cor-textos);
     font-family: var(--fonte-texto);
@@ -104,10 +114,12 @@ body {
     border: 2px solid var(--cor-destaque);
     border-radius: 8px;
     text-decoration: none;
+    transition: all 0.4s;
 }
 
 .apresentacao__links__botoes:hover {
     background-color: var(--cor-hover-fundo);
+    width: 53%;
 }
 
 .cor-destaque {
@@ -164,6 +176,10 @@ strong {
         font-size: 1rem;
     }
 
+    .cabecalho__menu__link:hover {
+        font-size: 1.3rem;
+    }
+
     .apresentacao {
         flex-direction: column-reverse;
         padding: 5% 8%;
@@ -188,6 +204,10 @@ strong {
     .apresentacao__links__botoes {
         width: 60%;
         font-size: 1.25rem;
+    }
+
+    .apresentacao__links__botoes:hover {
+        width: 65%;
     }
 
     .apresentacao__imagem {
