adding hamburger menu; adding transition effects

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,10 @@ body {
     color: var(--cor-textos);
 }
 
+.cabecalho__menu.-mobile {
+    display: none;
+}
+
 .cabecalho {
     padding: 2% 0% 0% 15%;
 }
@@ -195,17 +199,77 @@ strong {
         font-weight: normal;
     }
 
-    .cabecalho {
-        padding: 6%;
+    .cabecalho__menu.-desktop {
+        display: none;
     }
 
-    .cabecalho__menu {
-        justify-content: center;
-        gap: 15px;
+    .cabecalho {
+        padding: 0;
+    }
+
+    .cabecalho__menu.-mobile {
+        display: block;
+    }
+
+    .cabecalho__menu-button {
+        background: none;
+        border: none;
+        cursor: pointer;
+        padding: 1.5rem;
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        z-index: 1;
+    }
+    
+    .bar {
+        background-color: var(--cor-textos);
+        display: block;
+        height: 3.5px;
+        margin: 4px auto;
+        width: 30px;
+        transition: 0.5s;
+    }
+
+    .cabecalho__menu-button.active .bar1 {
+        transform: rotate(-45deg) translate(-5px, 5px);
+    }
+    
+    .cabecalho__menu-button.active .bar2 {
+        opacity: 0;
+    }
+    
+    .cabecalho__menu-button.active .bar3 {
+        transform: rotate(45deg) translate(-5px, -5px);
+    }
+
+    .cabecalho__menu__mobile-links {
+        display: flex;
+        flex-direction: column;
+        height: 15rem;
+        justify-content: space-around;
+        background-color: var(--cor-hover-fundo);
+        position: absolute;
+        top: 74.5px;
+        left: 0px;
+        width: 60%;
+        text-decoration: none;
+        text-align: left;
+        transform: translateX(-100%);
+        opacity: 0;
+        transition: all 0.5s ease;
+    }
+
+    .cabecalho__menu__mobile-links.show {
+        transform: translateX(0);
+        opacity: 1;
     }
 
     .cabecalho__menu__link {
-        font-size: 1rem;
+        color: var(--cor-textos);
+        font-size: 1.2rem;
+        font-weight: 400;
+        padding-left: 1.5rem;
     }
 
     .cabecalho__menu__link:hover {
@@ -266,6 +330,7 @@ strong {
 
     .apresentacao__imagem {
         width: 50%;
+        padding-top: 1rem;
     }
 
     .rodape {
