--- a/styles/style.css
+++ b/styles/style.css
@@ -62,17 +62,18 @@ h3 {
 
 .botao_idioma {
     cursor: pointer;
-    width: 2rem;
-    height: 2rem;
-    border: 2px solid var(--cor-textos);
+    width: 2.3rem;
+    height: 2.3rem;
+    border: 2px solid var(--cor-textos-2);
     border-radius: 50%;
     overflow: hidden;
+    opacity: 0.75;
     transition: all 0.5s;
 }
 
 .botao_idioma:hover {
-    width: 2.5rem;
-    height: 2.5rem;
+    border: 2px solid var(--cor-textos);
+    opacity: 1;
 }
 
 .apresentacao {
@@ -193,6 +194,11 @@ strong {
         position: sticky;
         top: 25%;
         align-self: flex-start;
+    }
+
+    .botao_idioma:hover {
+        width: 2.8rem;
+        height: 2.8rem;
     }
 }
 
