adding webkit to prevent the blue highlight when click on the hamburger menu; changing onclick to eventListener to performance

--- a/styles/style.css
+++ b/styles/style.css
@@ -229,6 +229,7 @@ strong {
     }
 
     .cabecalho__menu-button {
+        -webkit-tap-highlight-color: transparent;
         background: none;
         border: none;
         cursor: pointer;
