--- a/styles/style.css
+++ b/styles/style.css
@@ -139,7 +139,7 @@ h3 {
 .apresentacao__links__botoes {
     display: flex;
     width: 50%;
-    text-align: center;
+    align-items: center;
     justify-content: center;
     gap: 1rem;
     padding: 21.5px 0;
